--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>StyleHub Clothing Store</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <header>
-    <h1>StyleHub</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Men</a>
-      <a href="#">Women</a>
-      <a href="#">Contact</a>
-    </nav>
+    <div class="container">
+      <h1>StyleHub</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Men</a>
+        <a href="#">Women</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
   </header>
 
   <section class="hero">
-    <h2>New Summer Collection</h2>
-    <p>Trendy, Comfortable, and Affordable</p>
-    <a href="#" class="btn">Shop Now</a>
+    <div class="hero-content">
+      <h2>Explore the Summer Vibes</h2>
+      <p>Light. Bold. Limitless Style.</p>
+      <a href="#" class="btn">Explore Collection</a>
+    </div>
   </section>
 
   <section class="products">
-    <h2>Featured Products</h2>
+    <h2>Top Picks for You</h2>
     <div class="product-grid">
-      <div class="product">
+      <div class="product-card">
         <img src="https://via.placeholder.com/200x250" alt="Product 1">
         <h3>Casual Shirt</h3>
         <p>₹799</p>
       </div>
-      <div class="product">
+      <div class="product-card">
         <img src="https://via.placeholder.com/200x250" alt="Product 2">
         <h3>Denim Jacket</h3>
         <p>₹1,499</p>
       </div>
-      <div class="product">
+      <div class="product-card">
         <img src="https://via.placeholder.com/200x250" alt="Product 3">
         <h3>Summer Dress</h3>
         <p>₹1,299</p>
@@ -46,7 +51,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 StyleHub. All rights reserved.</p>
+    <p>&copy; 2025 StyleHub. Crafted with ❤️ for fashion lovers.</p>
   </footer>
 
 </body>
